# rnn-transducer

./: .gitignore  CMakeLists.txt  README.md
detail/: cpu_transducer.h
include/: transducer.h
include/detail/: :Q!  cpu_transducer.h  transducer_helper.h
src/: transducer_entrypoint.cpp
tensorflow_binding/: .gitignore  README.md  setup.py
tensorflow_binding/src/: transducer_op.cc
tensorflow_binding/tests/: base_test.py  test_transducer_op.py
tensorflow_binding/transducer_tensorflow/: __init__.py
tests/: test.h  test_cpu.cpp
